Remove/Comment stuff

--- a/app/(platform)/(home)/[workspaceId]/[...slug]/_components/styles.css
+++ b/app/(platform)/(home)/[workspaceId]/[...slug]/_components/styles.css
@@ -1,6 +1,6 @@
 /* Base theme */
 .bn-container[data-theming-css-variables-demo][data-color-scheme] .bn-editor {
-	--bn-colors-editor-text: #222222;
+	/* --bn-colors-editor-text: #222222;
 	--bn-colors-editor-background: #ffffff;
 	--bn-colors-menu-text: #ffffff;
 	--bn-colors-menu-background: #9b0000;
@@ -17,14 +17,13 @@
 	--bn-colors-side-menu: #bababa;
 	--bn-color-highlight-colors: #ffffff;
 	--bn-border-radius: 4px;
-	--bn-font-family: Helvetica Neue, sans-serif;
+	--bn-font-family: Helvetica Neue, sans-serif; */
 	padding-inline: 0px;
-
 }
 
 /* Changes for dark mode */
-.bn-container[data-theming-css-variables-demo][data-color-scheme="dark"] {
+/* .bn-container[data-theming-css-variables-demo][data-color-scheme="dark"] {
 	--bn-colors-editor-text: #ffffff;
 	--bn-colors-editor-background: #9b0000;
 	--bn-colors-side-menu: #ffffff;
-}
+} */
