--- a/app/(platform)/(home)/[workspaceId]/[...slug]/_components/styles.css
+++ b/app/(platform)/(home)/[workspaceId]/[...slug]/_components/styles.css
@@ -21,10 +21,54 @@
   font-weight: inherit !important;
 }
 
+input[type="checkbox"] {
+	border-radius: 30%;
+}
+
 /* Ensure Tailwind prose styles are applied */
 .prose h1,
 .prose h2,
 .prose h3 {
   font-size: revert !important;
   font-weight: revert !important;
+}
+
+
+.slash-menu {
+  z-index: 9999;
+
+  background-color: white;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  box-shadow: 0 0 8px #dddddd;
+
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+
+  padding: 8px;
+
+  top: 8px;
+}
+
+.slash-menu-item {
+  background-color: white;
+  border: 1px solid lightgray;
+  border-radius: 2px;
+  box-shadow: 0 0 4px #dddddd;
+
+  cursor: pointer;
+
+  font-size: 16px;
+
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+
+  padding: 8px;
+}
+
+.slash-menu-item:hover,
+.slash-menu-item.selected {
+  background-color: lightgray;
 }
